app/modules/kube/manifests/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: msprarosajeacr.azurecr.io/backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - name: upload-volume
              mountPath: /go/uploads
      volumes:
      - name: upload-volume
        persistentVolumeClaim:
          claimName: backend-pvc
