app/modules/kube/manifests/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
