app/modules/kube/manifests/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: ${ingress_host}
    http:
      paths:
      - pathType: Prefix
        path: "/backend"
        backend:
          service:
            name: backend-service
            port:
              number: 80
